Use Set.of in Charset